# Concordances

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
files/: smallPoem.txt
lib/: CMakeLists.txt  ConcordanceParser.cpp  ConcordanceParser.h
tests/: CMakeLists.txt  ConcordanceParser.test.cpp
